fix mobile nav visibility on desktop

--- a/themes/grain/source/css/style.scss
+++ b/themes/grain/source/css/style.scss
@@ -339,6 +339,7 @@ code {
 
 
 #sidebar-mobile {
+  display: none;
   position: fixed;
   left: 0;
   top: 88px;
@@ -401,6 +402,7 @@ code {
     display: flex;
   }
   #sidebar-mobile {
+    display: block;
     &.sidebar-toggled {
       transform: translateX(0);
     }
